--- a/server_side/test/index.html
+++ b/server_side/test/index.html
@@ -1,26 +1,59 @@
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/test/general.css">
-    <script type="text/javascript" src="/test/cliant_main.js"></script>
-    <title>クライアント画面出力</title>
-</head>
-<body>
-    <h1>デバッグ用リクエストボタン</h1>
-    <form action="post">
-        <input type="button" title="Create">
-        <p>
-            params:
-            <input type="text" title="key">
-            <input type="text" title="createday">
-            <input type="text" title="order">
-            <input type="text" title="answer1">
-            <input type="text" title="answer2">
-            <input type="text" title="">
-        </p>
-        <input type="button" title="Delete">
-    </form>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="/test/general.css">
+        <script type="text/javascript" src="/test/cliant_main.js"></script>
+        <title>クライアント画面出力</title>
+    </head>
+
+    <body>
+        <h1>デバッグ用リクエストボタン</h1>
+
+        <div class="request-box" id="create-area">
+            <input type="button" value="create" onclick="create()">
+            <p>
+                params:
+                <div class="arg"> <p class="arg-title"> key       </p> <input type="text" class="args" value="" title="key"       id="create-key">       </div>
+                <div class="arg"> <p class="arg-title"> createday </p> <input type="text" class="args" value="" title="createday" id="create-createday"> </div>
+                <div class="arg"> <p class="arg-title"> order     </p> <input type="text" class="args" value="" title="order"     id="create-order">     </div>
+                <div class="arg"> <p class="arg-title"> question  </p> <input type="text" class="args" value="" title="question"  id="create-question">  </div>
+                <div class="arg"> <p class="arg-title"> closeday  </p> <input type="text" class="args" value="" title="closeday"  id="create-closeday">  </div>
+                <div class="arg"> <p class="arg-title"> name      </p> <input type="text" class="args" value="" title="name"      id="create-name">      </div>
+                <div class="arg"> <p class="arg-title"> pass      </p> <input type="text" class="args" value="" title="pass"      id="create-pass">      </div>
+            </p>
+        </div>
+
+        <div class="request-box" id="delete-area">
+            <input type="button" value="delete" onclick="deleteQ()">
+            <p>
+                params:
+                <div class="arg"> <p class="arg-title"> key       </p> <input type="text" class="args" value="" title="key"       id="delete-key">       </div>
+                <div class="arg"> <p class="arg-title"> createday </p> <input type="text" class="args" value="" title="createday" id="delete-createday"> </div>
+                <div class="arg"> <p class="arg-title"> order     </p> <input type="text" class="args" value="" title="order"     id="delete-order">     </div>
+                <div class="arg"> <p class="arg-title"> question  </p> <input type="text" class="args" value="" title="question"  id="delete-question">  </div>
+                <div class="arg"> <p class="arg-title"> closeday  </p> <input type="text" class="args" value="" title="closeday"  id="delete-closeday">  </div>
+                <div class="arg"> <p class="arg-title"> name      </p> <input type="text" class="args" value="" title="name"      id="delete-name">      </div>
+                <div class="arg"> <p class="arg-title"> pass      </p> <input type="text" class="args" value="" title="pass"      id="delete-pass">      </div>
+            </p>
+        </div>
+
+        <div class="request-box" id="answer-area">
+            <input type="button" value="answer" onclick="answer()">
+            <p>
+                params:
+                <div class="arg"> <p class="arg-title"> key       </p> <input type="text" class="args" value="" title="key"       id="answer-key">       </div>
+                <div class="arg"> <p class="arg-title"> createday </p> <input type="text" class="args" value="" title="createday" id="answer-createday"> </div>
+                <div class="arg"> <p class="arg-title"> order     </p> <input type="text" class="args" value="" title="order"     id="answer-order">     </div>
+                <div class="arg"> <p class="arg-title"> answer1   </p> <input type="text" class="args" value="" title="answer1"   id="answer-answer1">   </div>
+                <div class="arg"> <p class="arg-title"> answer2   </p> <input type="text" class="args" value="" title="answer2"   id="answer-answer2">   </div>
+                <div class="arg"> <p class="arg-title"> id        </p> <input type="text" class="args" value="" title="id"        id="answer-id">        </div>
+            </p>
+        </div>
+
+        <h1>出力内容</h1>
+
+        <p><!-- -voteSystem.output- --></p>
+    </body>
 </html>
