--- a/server_side/test/index.html
+++ b/server_side/test/index.html
@@ -52,6 +52,19 @@
             </p>
         </div>
 
+        <div class="request-box" id="answer-area">
+            <input type="button" value="init" onclick="init()">
+            <p>
+                params:
+                <div class="arg"> <p class="arg-title"> key       </p> <input type="text" class="args" value="" title="key"       id="answer-key">       </div>
+                <div class="arg"> <p class="arg-title"> createday </p> <input type="text" class="args" value="" title="createday" id="answer-createday"> </div>
+                <div class="arg"> <p class="arg-title"> order     </p> <input type="text" class="args" value="" title="order"     id="answer-order">     </div>
+                <div class="arg"> <p class="arg-title"> answer1   </p> <input type="text" class="args" value="" title="answer1"   id="answer-answer1">   </div>
+                <div class="arg"> <p class="arg-title"> answer2   </p> <input type="text" class="args" value="" title="answer2"   id="answer-answer2">   </div>
+                <div class="arg"> <p class="arg-title"> id        </p> <input type="text" class="args" value="" title="id"        id="answer-id">        </div>
+            </p>
+        </div>
+
         <h1>出力内容</h1>
 
         <pre id="output"></pre>
